# python-cookiecutter

./: .gitignore  README.org  cookiecutter.json
extensions/: path_extension.py
hooks/: post_gen_project.sh
{{cookiecutter.project_slug}}/: README.org  cookiecutter.json  pyproject.toml
{{cookiecutter.project_slug}}/hooks/: post_gen_project.sh
